tests/baselines/reference/interfaceSpread.errors.txt
tests/cases/conformance/types/spread/interfaceSpread.ts(2,5): error TS2698: Interface declaration cannot contain a spread property.
tests/cases/conformance/types/spread/interfaceSpread.ts(7,10): error TS2339: Property 'jam' does not exist on type 'Congealed<{ jam: number; }, { peanutButter: number; }>'.
tests/cases/conformance/types/spread/interfaceSpread.ts(8,10): error TS2339: Property 'peanutButter' does not exist on type 'Congealed<{ jam: number; }, { peanutButter: number; }>'.


==== tests/cases/conformance/types/spread/interfaceSpread.ts (3 errors) ====
    interface Congealed<T, U> {
        ...T
        ~~~~
!!! error TS2698: Interface declaration cannot contain a spread property.
        ...U
    }
    
    let sandwich: Congealed<{jam: number }, { peanutButter: number }>;
    sandwich.jam;
             ~~~
!!! error TS2339: Property 'jam' does not exist on type 'Congealed<{ jam: number; }, { peanutButter: number; }>'.
    sandwich.peanutButter;
             ~~~~~~~~~~~~
!!! error TS2339: Property 'peanutButter' does not exist on type 'Congealed<{ jam: number; }, { peanutButter: number; }>'.
    